--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Monos
-email: ejjoo7994@gmail.com
+title: Ahn
+email: ayt0913@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Themed by ejjoo
-# baseurl: "/" # the subpath of your site, e.g. /blog
-# url: "http://ejjoo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-github_username: ejjoo
+  이것저것
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://y00913.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+github_username: y00913
 highlighter: rouge
 svg:
   optimize: true
