--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ plugins:
 category_dir: category/
 tag_dir: tag/
 disqus_url: https://disqus.com/home/forums/y00913-github-io/
-disqus_id: y00913-github-io.disqus.com
+disqus_id: y00913-github-io
 
 # Exclude from processing.
 # The following items will not be processed, by default.
