--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ plugins:
   - jekyll-feed
 category_dir: category/
 tag_dir: tag/
+disqus_shortname : myblog(y00913-github-io)
 
 # Exclude from processing.
 # The following items will not be processed, by default.
