--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ plugins:
 category_dir: category/
 tag_dir: tag/
 disqus_shortname : myblog(y00913-github-io)
+google_analytics: G-X5JXGZWMR7
 
 # Exclude from processing.
 # The following items will not be processed, by default.
