--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: ayt0913@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Ahn's BLOG
 baseurl: /y00913.github.io/ # the subpath of your site, e.g. /blog
-url: "https://y00913.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://y00913.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: y00913
 highlighter: rouge
 svg:
