--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ highlighter-theme: monokai
 date_format: "%Y-%M-%D"
 plugins:
   - jekyll-feed
+  - jekyll-paginate
+paginate: 20
+paginate_path: "/page:num/"
 category_dir: category/
 tag_dir: tag/
 # disqus_shortname : myblog(y00913-github-io)
